--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,15 @@ a {
   color: #000000;
 }
 
+li {
+  list-style-type: none;
+}
+
+ul {
+  margin-left: 0;
+  padding-left: 0;
+}
+
 .lang_bg {
   background-color: #DFE7EA;
   border-radius: 5px;
@@ -67,6 +76,62 @@ a {
 .main__text {
   font-size: 20px;
   color: #52636C;
+}
+
+.li__base {
+  background: #F8F8F8;
+  border: 1px solid rgba(0, 0, 0, 0.14);
+  border-radius: 15px;
+  font-size: 23px;
+  letter-spacing: 0.15em;
+  color: rgba(19, 27, 37, 0.45);
+}
+
+.li__active {
+  color: rgba(19, 27, 37, 0.78);
+  -webkit-box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.11);
+          box-shadow: 0px 4px 25px rgba(0, 0, 0, 0.11);
+}
+
+.li__item {
+  cursor: pointer;
+}
+
+.li__text {
+  border: 1px solid #DBDBDB;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.li__text_none {
+  display: none;
+}
+
+.squard {
+  background-image: url(../img/yes.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: 306px;
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  -webkit-box-shadow: inset 0px 4px 15px rgba(0, 0, 0, 0.06);
+          box-shadow: inset 0px 4px 15px rgba(0, 0, 0, 0.06);
+  margin-left: 68px;
+  margin-top: 30px;
+}
+
+.squard__text {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 135%;
 }
 
 .footer {
